Cambios en users y auth para implementacion CRUD de supervisores
