# api/models/users.model.js
@@ -67,9 +67,9 @@ export const getSupervisorsModel = async () => {
 
     const cnn = await pool.getConnection()
 
-    const query = `select u.id, u.name, u.email, u.accountNumber, u.identityNumber, d.name as career from users as u
+    const query = `select u.id, u.name, u.email, u.accountNumber, u.identityNumber, d.name as career, u.isDeleted from users as u
    inner join degrees as d on u.degreeId = d.id
-   where u.role = 'supervisor' and u.isDeleted = 'false'`
+   where u.role = 'supervisor'`
 
     const [result] = await cnn.query(query)
 
@@ -80,10 +80,28 @@ export const getCareersModel = async () => {
 
     const cnn = await pool.getConnection()
 
-    const query = `select d.code, d.name, d.faculty from degrees as d`
+    const query = `select d.id, d.code, d.name, d.faculty from degrees as d`
 
     const [result] = await cnn.query(query)
 
+    return result
+}
+
+export const disableSupervisorModel = async (id) => {
+
+    const cnn = await pool.getConnection()
+
+    const query = `update users set isDeleted = true where accountNumber = ? and role = 'supervisor'`
+    const [result] = await cnn.query(query, [id])
+    return result
+}
+
+export const enableSupervisorModel = async (id) => {
+
+    const cnn = await pool.getConnection()
+
+    const query = `update users set isDeleted = 'false' where accountNumber = ? and role = 'supervisor'`
+    const [result] = await cnn.query(query, [id])
     return result
 }
 
